v8/tests/messages/non-method-called.out
non-method-called.js:1: Uncaught TypeError: Property 'foo' of object #<an Object> is not a function
({foo: 0}).foo()
           ^
